<resources>
    <string name="app_name">Baking</string>

    <string name="network_connection_error">No Network Connection </string>

    <string name="error_message">Some error occured. Please try again!</string>

    <string name="refresh">Refresh</string>

    <string name="recipe_content_description">Recipe</string>

    <string name="servings_label">Servings: </string>

    <string name="ingredients_label">Ingredients, </string>

    <string name="detail_ingredients_label">Ingredients:</string>

    <string name="steps_label">Steps</string>

    <string name="detail_steps_label">Steps:</string>

    <string name="step_description_label">Description</string>

    <string name="next_button">Next -></string>

    <string name="previous_button">&lt;- Previous</string>

    <string name="add_widget">Add widget</string>

    <string name="widget_label">Recently Viewed Recipe</string>

    <string name="widget_ingredient_label">Ingredients:</string>
</resources>
