<?xml version="1.0" encoding="utf-8"?>

<LinearLayout   xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="@integer/fragment_step_weight_sum">

    <ScrollView android:layout_width="match_parent"
                android:layout_height="@dimen/empty"
                android:layout_weight="@integer/fragment_step_detail_weight">

        <LinearLayout
            android:id="@+id/ll_step_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin"
            android:orientation="vertical">

            <TextView   android:id="@+id/tv_step_title"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin" />

            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:id="@+id/video_player"
                android:layout_width="match_parent"
                android:layout_height="@dimen/video_height"
                android:layout_marginTop="@dimen/margin"
                android:adjustViewBounds="true" />

            <TextView   android:id="@+id/step_description_label"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin"
                        android:text="@string/step_description_label" />

            <TextView   android:id="@+id/tv_step_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin" />

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/empty"
        android:background="@color/colorPrimary"
        android:layout_marginTop="@dimen/margin"
        android:layout_weight="@integer/fragment_step_button_weight">

        <Button
            android:id="@+id/previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:text="@string/previous_button" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:text="@string/next_button" />

    </RelativeLayout>

</LinearLayout>